cv_green_2023_2.css
/* ... */
			section h2.two_lines span:last-of-type{//max-width:75px}
	section .desc{padding:0 0 3px 0;/*font-family:'Myriad Variable Italic'*/}
		section h2+div span {//display:inline-block;//text-align:justify!important}
		section h2+div li {//margin-top:5px}
	section#interests .desc {padding:2px 0 2px 30px;display:block;float:none;clear:left}
	section h2+div:last-child{padding-bottom:0}
	section>table{width:100%;margin-top:-10px}
		section>table td{padding:5px 10px;vertical-align:top}
			section>table td .fas{width:100%;text-align:left;font-size:15px;color:hsl(172deg 45% 37%)}
	section#languages .drapeau {background:url('images/uk2.svg') 74%/28px no-repeat;width:16px;height:16px;border-radius:100%;margin:0 7px 0 6px;margin-top:-2px}
	section#languages .drapeau#es{background-image:url('images/es.svg')}
	section#languages .score {border:1px solid rgba(220,80,60,1);border-top-color:hsl(172deg 30% 47%);border-right-color:hsl(172deg 45% 39%);border-bottom-color:hsl(172deg 45% 39%);border-left-color:hsl(172deg 30% 47%);height:12px;box-sizing:border-box;width:calc(100% - 30px);display:grid;border-radius:8px 0 0 8px;border-radius:8px}
	.full {background:hsl(172deg 45% 37%);/*border-radius:8px 16px 0px 8px;*//*border-radius:7px;*/border-radius:7px 32px 0px 7px / 7px 16px 0px 7px}
	.empty {position:relative;z-index:-1;padding-left:20px;margin-left:-20px;border-radius:8px}
	section#languages .score.en {grid-template-columns:31fr 1fr}
	section#languages .score.es {grid-template-columns:5fr 3fr}
	section#languages .score+div {margin-top:2px}
	section#skills li {border:1px solid #DDD;color:black;display:inline-block;line-height:20px;padding:0 5px;margin:0 -1px -1px 0}
	.desc li {list-style:none;position:relative;padding:0 0 0 10px}
	.desc li:not(:only-of-type):before {content:"";border-left:4px solid var(--light_brown);border-top:4px solid transparent;border-bottom:4px solid transparent;display:inline-block;width:5px;margin:0 2px 0 -11px}
	
	
/***** ACCESSORIES *****/

.no-print {
display:none}

@media screen and (min-width:1350px) {
	body{background-color:white}
	.no-print{display:block}
	a.no-print img{height:100%}
	#printer {position:absolute;/*right:*/left:-27cm;top:-10cm;height:29cm;transform:rotate(-41deg);filter:drop-shadow(6px 6px 24px black);}
	#book {
		position:absolute;right:-9cm;top:-5cm;height:18cm;transform:rotate(-20deg);box-shadow:	1px 1px 1px rgba(0,0,0,.5),	2px 2px 1px rgba(200,200,200,.5),
					3px 3px 1px rgba(0,0,0,.5),	4px 4px 1px rgba(200,200,200,.5),
					5px 5px 1px rgba(0,0,0,.5),	6px 6px 1px rgba(200,200,200,.5),
					7px 7px 1px rgba(0,0,0,.5),	8px 8px 1px rgba(200,200,200,.5),
					9px 9px 1px rgba(0,0,0,.5),	10px 10px 1px rgba(200,200,200,.5),
					11px 11px 1px rgba(0,0,0,.5),12px 12px 1px rgba(200,200,200,.5),
					13px 13px 1px rgba(0,0,0,.5),14px 14px 1px rgba(200,200,200,.5),
					15px 15px 1px rgba(0,0,0,.5),16px 16px 1px rgba(200,200,200,.5),
					17px 17px 50px black
	}
	@import "compass/css3";
@import url(https://fonts.googleapis.com/css?family=Permanent+Marker);
.post-it {
    position: absolute;
    top: 11.3cm;
    right: 5cm;
    height: 6cm;
    width: 1.5cm;
    font-family: 'AbsolutelySilent',cursive;
    font-weight: 500;
    font-size: 1.1cm;
    writing-mode: vertical-lr;
    transform: rotate(-80deg);
    text-align: right;
    line-height: 1.5cm;
    padding: 0 0 20px 0;
    background: #ffA;
    background-image: linear-gradient(45deg, rgba(255,255,255,.5), 27%, transparent), linear-gradient(45deg, rgba(0,0,0,.05) 0% 5%, transparent 5% 10%,rgba(0,0,0,.05) 10% 15%, transparent 15% 20%,rgba(0,0,0,.05) 20% 25%, transparent 25% 30%,rgba(0,0,0,.05) 30% 35%, transparent 35% 40%,rgba(0,0,0,.05) 40% 45%, transparent 45% 50%,rgba(0,0,0,.05) 50% 55%, transparent 55% 60%,rgba(0,0,0,.05) 60% 65%, transparent 65% 70%,rgba(0,0,0,.05) 70% 75%, transparent 75% 80%,rgba(0,0,0,.05) 80% 85%, transparent 85% 90%,rgba(0,0,0,.05) 90% 95%, transparent 95% 100%);
    overflow: hidden;
    border-radius: 0 0 0 30px/45px;
    box-shadow: 0 9px 2px 0.5px rgba(0,0,0,.1);
    color: #050053;
}
.post-it:before {content:"";display:block;position:absolute;width:20px;height:25px;background:#ffa;box-shadow:3px -2px 10px rgba(0,0,0,0.3),inset 15px -15px 15px rgba(0,0,0,0.4);left:0;bottom:0;z-index:2;transform:skewX(25deg);}
.post-it img {filter: brightness(0.5) saturate(0.5);opacity: .8;width: 0.8cm;margin-bottom: 15px;}

h1 {font-size:25px;position:relative;}


	#phone {
		position:absolute;right:3cm;top:13cm;height:16cm;width:8cm;transform:rotate(-6deg);/*box-sizing:border-box;*/
		background-color:black;box-shadow:1px 1px 1px 4px rgba(0,0,0,.4), 0 0 3px 4px grey, 0 0 2px 5px lightgrey, 0 0 0 7px black, 3px 3px 9px 11px rgba(0,0,0,.5);border-radius:30px;cursor:pointer;}
	div#phone:before {
		content:'';height:80px;width:0;left:-9px;top:151px;position:absolute;box-shadow:0px 0px 0px 1px grey, 1px 1px 0px 2px black;}
	div#phone:after {
		content:'';height:40px;width:0;right:-8px;top:151px;position:absolute;box-shadow:0px 0px 0px 1px grey, 1px 1px 0px 1px black;}
	div#phone_screen {
		height:100%;padding:7px 7px 20px 7px;box-sizing:border-box;overflow:hidden;border-radius:30px;}
	div#phone_screen::before {
		content:'';opacity:.1;width:0;height:0;position:absolute;z-index:9;border-right:8cm solid transparent;border-top:16cm solid white;pointer-events:none;border-radius:30px;margin:-7px 0 -22px -7px;}
	div#phone_screen:after {
		background:black;content:'';width:3cm;height:15px;top:0;position:absolute;right:calc(50% - 3cm/2);z-index:9;border-radius:0 0 28px 28px;}
	iframe#myIframe {
		height:100%;width:100%;z-index:-1;border-radius:25px;display:none;outline: 13px black solid;outline-offset: -1px}
	/*iframe[src="about:blank"]{display:none}*/
	img#coffee {bottom:100px;left:100px;height:5cm;position:absolute;opacity:.5;mix-blend-mode:multiply;}
}

